--- a/sass/modules/_page.sass
+++ b/sass/modules/_page.sass
@@ -1,7 +1,8 @@
 #page
   +outer-container
+  // background-color: tint(lighten($light-blue,25%),90%)
+  // border: 3px solid $grey
 
 #content
-  margin: 0 1em
-  +media(1000px)
-    margin: 0
+  // margin: 0 3rem
+  
