--- a/sass/partials/_neat-settings.sass
+++ b/sass/partials/_neat-settings.sass
@@ -1,7 +1,9 @@
 @import '../neat/neat-helpers'
 
-$column: golden-ratio(1em, 3) // 90px
-$gutter: golden-ratio(1em, 1) // 30px
+$column: golden-ratio(1em, 3) 
+$gutter: golden-ratio(1em, 1) 
+$fg-column: $column
+$fg-gutter: $gutter
 $grid-columns: 4
 $max-width: 1000px
 
