--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,16 +3,23 @@ $base-font-size: 7px
 @import vendor/normalize
 @import vendor/rem
 
+
 @import bourbon/bourbon
 @import partials/neat-settings
 @import neat/neat
+@import vendor/omega-reset
 
 @import partials/vars
 @import base
 @import modules/page
+@import modules/wrap
 @import modules/navigation
+@import modules/clearfix
 @import vendor/underscore
 @import modules/fitvids
 @import vendor/suit/text
+@import vendor/suit/space
 @import modules/home
 @import modules/form
+@import modules/featured
+@import modules/expert
