--- a/sass/modules/_form.sass
+++ b/sass/modules/_form.sass
@@ -4,8 +4,7 @@
   width: 100%
   // +media($medium)
   //   width: 50%
-  // +media($large)
-  //   width: 100%
+
 
 .form-field
   +rem(padding, 2rem)
@@ -13,17 +12,22 @@
   +media($large)
     +rem(padding, 1rem)
     +rem(margin, 0.5rem 0)
+  box-shadow: 0px 0px 5px $grey
+  color: $orange
   +placeholder
     color: $orange
   +transition(all 0.5s)
   &:active, &:focus
     color: darken($orange,10%)
-    // box-shadow: 1px 1px 10px $grey
+    box-shadow: 0px 0px 8px #444
     +placeholder
       color: darken($orange,10%)
+  +media($large)
+    width: 80%
 
 .form-submit
-  @extend .smallcaps
+  text-transform: uppercase
+  font-size: 0.8em
   +rem(padding, 2rem 0)
   border-radius: 2px
   color: $dark-blue
@@ -36,8 +40,8 @@
     position: relative
     top: 3px
   +media($medium)
-    width: 35%
+    width: 45%
   +media($large)
     +rem(padding, 1rem 0)
-    width: 50%
+  // width: 50%
   
