--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -1,8 +1,34 @@
-.home-callout
-  +media($large)
-    +span-columns(7)
+.home-header
+  font-size: 4rem
+  +rem(margin-top, 3rem)
+  +rem(margin-bottom, 5rem)
+  text-align: center
+  
+.home-hook
+  +rem(margin-bottom, 5rem)
+  font-size: 4rem
+  text-align: center
+  // +media($medium)
+  //   +span-columns(5)
+  // +media($large)
+  //   +span-columns(7)
+
+.home-video
+  +media($medium)
+    +span-columns(4)
+  // +media($medium)
+  //   +span-columns(3)
+  //   +omega
+  // +media($large)
+  //   +span-columns(5)
+  //   +omega
 
 .home-form
-  +media($large)
-    +span-columns(5)
+  +media($medium)
+    +span-columns(4)
     +omega
+  // +media($medium)
+  //   +span-columns(5)
+  // +media($large)
+  //   +span-columns(7)
+  
