Implement omega reset

--- a/sass/modules/_expert.sass
+++ b/sass/modules/_expert.sass
@@ -2,11 +2,11 @@
   img
     max-width: 225px
 .expert   
-  // +media($medium)
-  //   +span-columns(4)
-  //   +omega(2n)
+  +media($medium)
+    +span-columns(4)
+    +omega(2n)
   +media($large)
-    // +omega-reset(2n)
+    +omega-reset(2n, 12)
     +span-columns(4)
     +omega(3n)
 
