Background color for form fields

--- a/sass/modules/_form.sass
+++ b/sass/modules/_form.sass
@@ -12,6 +12,7 @@
   +media($large)
     +rem(padding, 1rem)
     +rem(margin, 0.5rem 0)
+  background-color: lighten(#e4e8ed,5%)
   box-shadow: 0px 0px 5px $grey
   color: $orange
   +placeholder
