--- a/sass/style.sass
+++ b/sass/style.sass
@@ -23,3 +23,7 @@ $base-font-size: 7px
 @import modules/form
 @import modules/featured
 @import modules/expert
+
+
+@import vendor/flipclock
+@import modules/countdown
