--- a/sass/modules/_form.sass
+++ b/sass/modules/_form.sass
@@ -28,7 +28,7 @@
 
 .form-submit
   text-transform: uppercase
-  font-size: 0.8em
+  // font-size: 1em
   +rem(padding, 2rem 0)
   border-radius: 2px
   color: $dark-blue
