Logos smaller on mobile

--- a/sass/modules/_featured.sass
+++ b/sass/modules/_featured.sass
@@ -14,8 +14,10 @@
     display: inline-block
     img
       float: left
-      max-height: 45px
+      max-height: 30px
       +rem(padding, 1rem 2rem)
+      +media($medium)
+        max-height: 45px
 
 
 
