--- a/sass/modules/_form.sass
+++ b/sass/modules/_form.sass
@@ -29,11 +29,10 @@
 .form-submit
   text-transform: uppercase
   // font-size: 1em
-  +rem(padding, 2rem 0)
+  +rem(padding, 1.5rem 0)
   border-radius: 2px
   color: $dark-blue
   background-color: $green
-  // border-bottom: 5px solid darken($green, 10%)
   box-shadow: 0px 5px 0px darken($green, 10%)
   &:hover
     background-color: lighten($green,8%)
@@ -42,5 +41,15 @@
     top: 3px
   +media($medium)
     width: 45%
+
+.button--important
+  color: #fff
+  background-color: $red
+  box-shadow: 0px 5px 0px darken($red, 10%)
+  &:hover
+    background-color: lighten($red,8%)
+    box-shadow: 0px 2px 0px darken($red, 10%)
+    position: relative
+    top: 3px
 
   
