--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -1,11 +1,11 @@
 .home-header
   font-size: 4rem
   +rem(margin-top, 3rem)
-  +rem(margin-bottom, 5rem)
+  // +rem(margin-bottom, 5rem)
   text-align: center
   
 .home-hook
-  +rem(margin-bottom, 5rem)
+  // +rem(margin-bottom, 5rem)
   font-size: 4rem
   text-align: center
   // +media($medium)
@@ -24,11 +24,15 @@
   //   +omega
 
 .home-form
+  +rem(margin-bottom, 5rem)
+  +rem(margin-top, 5rem)
+  +rem(padding, 0 5rem)
+  border: 4px solid $red
+  +border-radius-large
   +media($medium)
     +span-columns(4)
     +omega
-  // +media($medium)
-  //   +span-columns(5)
-  // +media($large)
-  //   +span-columns(7)
+  .form-submit
+    background-color: $red
+
   
