--- a/sass/partials/_vars.sass
+++ b/sass/partials/_vars.sass
@@ -1,3 +1,5 @@
+$base-font-size: 7px
+
 // banner colors
 
 $orange: #f79122
@@ -5,3 +7,6 @@ $dark-blue: #106085
 $light-blue: #3fc8f4
 $green: #acd038
 $grey: #ced5df
+
+// other colors
+$red: tomato
