Move $tan to vars

--- a/sass/modules/_featured.sass
+++ b/sass/modules/_featured.sass
@@ -2,7 +2,7 @@
   border: 2px solid $grey
   clear: both
   margin-bottom: 0
-  background-color: #f8f5f0
+  background-color: $tan
   +border-radius-large
 
 // ul of featured logos
