--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -20,6 +20,9 @@ p
 p, h1,h2,h3,h4,h5,h6, .expert
   +rem(margin-bottom, 3rem)
 
+.lead
+  +rem(font-size, 4rem)
+
 section
   +rem(margin-bottom, 5rem)
 
@@ -31,8 +34,6 @@ h1,h2,h3,h4,h5,h6,.mega,.giga
   em
     font-style: normal
 
-// h1,h2,h3,h4,h5,h6
-//   +rem(margin-bottom, 4rem)
 
 #giga
   margin-bottom: 0
