--- a/sass/modules/_form.sass
+++ b/sass/modules/_form.sass
@@ -1,3 +1,6 @@
+label
+  color: $orange
+
 .form-field, .form-submit
   outline: none
   border: none
@@ -8,11 +11,10 @@
 
 .form-field
   +rem(padding, 2rem)
-  +rem(margin, 1rem 0)
+  +rem(margin, 1rem 0 2rem)
   +media($large)
     +rem(padding, 1rem)
-    +rem(margin, 0.5rem 0)
-  background-color: lighten(#e4e8ed,5%)
+  background-color: $tan
   box-shadow: 0px 0px 5px $grey
   color: $orange
   +placeholder
@@ -23,8 +25,6 @@
     box-shadow: 0px 0px 8px #444
     +placeholder
       color: darken($orange,10%)
-  +media($large)
-    width: 80%
 
 .form-submit
   text-transform: uppercase
