--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -4,7 +4,7 @@
   text-align: center
   
 .home-hook
-  font-size: 4rem
+  @extend .lead
   text-align: center
 
 .home-video
@@ -12,10 +12,14 @@
     +span-columns(4)
 
 .home-form
+  h2
+    color: $dark-blue
   +rem(margin-bottom, 5rem)
   +rem(margin-top, 5rem)
   +rem(padding, 0 5rem)
-  border: 4px solid $red
+  border: 4px solid $orange
+  // background-color: lighten(tint($light-blue,80%),2%)
+  // background-color: $tan
   +border-radius-large
   +media($medium)
     +span-columns(4)
