--- a/sass/modules/_form.sass
+++ b/sass/modules/_form.sass
@@ -28,7 +28,7 @@ label
 
 .form-submit
   text-transform: uppercase
-  // font-size: 1em
+  letter-spacing: 1px
   +rem(padding, 1.5rem 0)
   border-radius: 2px
   color: $dark-blue
@@ -36,20 +36,21 @@ label
   box-shadow: 0px 5px 0px darken($green, 10%)
   &:hover
     background-color: lighten($green,8%)
-    box-shadow: 0px 2px 0px darken($green, 10%)
-    position: relative
-    top: 3px
-  +media($medium)
-    width: 45%
+    // box-shadow: 0px 2px 0px darken($green, 10%)
+    // position: relative
+    // top: 3px
+  // +media($medium)
+  //   width: 45%
 
 .button--important
   color: #fff
   background-color: $red
-  box-shadow: 0px 5px 0px darken($red, 10%)
+  box-shadow: 0px 5px 0px darken($red, 15%)
+  +transition(all 0.25s)
   &:hover
-    background-color: lighten($red,8%)
-    box-shadow: 0px 2px 0px darken($red, 10%)
-    position: relative
-    top: 3px
+    background-color: darken($red,10%)
+    // box-shadow: 0px 2px 0px darken($red, 20%)
+    // position: relative
+    // top: 3px
 
   
