--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -18,6 +18,7 @@
   +rem(margin-top, 5rem)
   +rem(padding, 0 5rem)
   border: 4px solid $orange
+  box-shadow: 1px 1px 1px $grey, -1px -1px 1px $grey
   // background-color: lighten(tint($light-blue,80%),2%)
   // background-color: $tan
   +border-radius-large
