Opt in heading in red

--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -13,7 +13,7 @@
 
 .home-form
   h2
-    // color: $red
+    color: $red
   +rem(margin-bottom, 5rem)
   +rem(margin-top, 5rem)
   +rem(padding, 0 5rem)
