--- a/sass/modules/_expert.sass
+++ b/sass/modules/_expert.sass
@@ -1,14 +1,20 @@
 .expert
   img
-    max-width: 225px
-.expert   
+    max-width: 225px   
+  border-bottom: 1px solid $grey     
   +media($medium)
+    border: none
     +span-columns(4)
     +omega(2n)
+    &:nth-child(2n+1):last-child
+      +shift(2)
   +media($large)
     +omega-reset(2n, 12)
     +span-columns(4)
     +omega(3n)
+    &:nth-child(2n+1):last-child // undo the shift from medium breakpoint
+      +shift(0)
+
 
 
 
