--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,7 @@
 @import partials/vars
 @import modules/mixins
 @import modules/clearfix
+@import modules/grid
 @import vendor/rem
 
 // vendor stuff
