Some changes and stuff

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -84,7 +84,8 @@ ul
   list-style-image: url('images/checkmark.svg')
 
 blockquote
-  border-left: 4px solid $orange
+  margin-left: 0
+  border-left: 6px solid $dark-blue
   +rem(padding-left, 2rem)
   footer:before
     content: "\2014"
