--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -2,30 +2,36 @@
   font-size: 4rem
   +rem(margin-top, 3rem)
   text-align: center
-  
+ 
+.home-video
+  // +rem(margin-bottom, 5rem)
+  +rem(margin-top, 5rem)
+  +media($medium)
+    +rem(margin-top, 6rem)
+
 .home-benefits
   @extend .lead
   // text-align: center
   +rem(margin-top, 5rem)
-  ul li
-    +rem(margin-bottom, 2rem)
+  ul 
+    +media($large)
+      padding-left: 0
+    li
+      +rem(margin-bottom, 2rem)
 
 .home-form
-  h2
-    color: $red
-  +rem(margin-bottom, 5rem)
-  // +rem(margin-top, 5rem)
   +rem(padding, 0 5rem)
   border: 4px solid $dark-blue
   +media($medium)
     border-width: 6px
   box-shadow: 1px 1px 1px $grey, -1px -1px 1px $grey
-  // background-color: lighten(tint($light-blue,80%),2%)
-  // background-color: $tan
   +border-radius-large
-  // +media($large)
-  //   +span-columns(6)
-  //   +omega
-  //   float: right
+  +media($large)
+    +span-columns(8)
+    +shift(2)
+  clear: both
+
+.experts
+  clear: both
 
   
