--- a/sass/modules/_wrap.sass
+++ b/sass/modules/_wrap.sass
@@ -1,5 +1,2 @@
 .wrap
-  +rem(padding, 6rem auto)
-  +rem(margin, 3rem auto)
-  clear: both
-  background-color: tint($orange,85%)
+  max-width: 36em
