--- a/sass/partials/_neat-settings.sass
+++ b/sass/partials/_neat-settings.sass
@@ -8,6 +8,7 @@ $grid-columns: 4
 $max-width: 1000px
 
 $medium: new-breakpoint(min-width em(600) 8)
-$large: new-breakpoint(min-width em(980) 12)
+$large: new-breakpoint(min-width em(960) 12)
 
 // $visual-grid: true
+$visual-grid-index: front
