--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,11 +7,12 @@
 @import vendor/omega-reset
 
 // setup stuff
+@import vendor/rem
 @import partials/vars
 @import modules/mixins
 @import modules/clearfix
 @import modules/grid
-@import vendor/rem
+
 
 // vendor stuff
 @import vendor/underscore
@@ -20,15 +21,23 @@
 @import modules/fitvids
 @import vendor/flipclock
 @import modules/countdown
+@import vendor/responsive-iframe
 
 // my stuff
 @import base
 @import modules/page
 @import modules/wrap
 @import modules/navigation
-@import modules/home
 @import modules/form
+@import modules/button
+
+@import modules/home
+@import modules/welcome
 @import modules/featured
 @import modules/expert
+@import modules/plan
+@import modules/footer
+@import modules/animations
+@import modules/calendar
 
 
