--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -1,14 +1,12 @@
 html
-  font-size: 5px
-  +media($medium)
-    font-size: 6px
+  font-size: 6px
   +media($large)
     font-size: 7px
 
 body
   // background-color: lighten(#e4e8ed,5%)
   +rem(font-size, 2.4rem)
-  line-height: 1.33
+  line-height: 1.5
   font-family: "rooney-web", serif
   color: #222
   margin: 0 3rem
@@ -21,10 +19,17 @@ p, h1,h2,h3,h4,h5,h6, .expert
   +rem(margin-bottom, 3rem)
 
 .lead
-  +rem(font-size, 3rem)
+  +media($medium)
+    +rem(font-size, 3rem)
 
 section
   +rem(margin-bottom, 5rem)
+
+small
+  font-size: 0.6em
+
+.site-header
+  +rem(margin-bottom, 3rem)
 
 h1,h2,h3,h4,h5,h6,.mega,.giga
   font-family: "alternate-gothic-no-3-d"
@@ -35,28 +40,50 @@ h1,h2,h3,h4,h5,h6,.mega,.giga
     font-style: normal
 
 
-#giga
+#giga, #giga-js
+  margin-top: 0
   margin-bottom: 0
   +rem(font-size, 10rem)
+  // font-weight: 700
   letter-spacing: 1px
   color: $orange
   text-shadow: 2px 3px 2px $grey
   text-transform: uppercase
   +media($medium)
-    +rem(font-size, 16rem)
+    +rem(font-size, 12rem)
     text-shadow: 2px 3px 2px rgba(0,0,0,0.1), 6px 6px 0px rgba(0,0,0,0.2)
 
-#mega
+#giga-js
+  visibility: hidden
+
+#mega, #mega-js
   margin-top: 0
-  +rem(font-size, 6rem)
+  +rem(font-size, 8rem)
   letter-spacing: 1px
   color: $dark-blue
   text-transform: uppercase
-  margin-bottom: none
   text-align: center
   +media($medium)
-    +rem(font-size, 9rem)
+    +rem(font-size, 10rem)
     text-shadow: 2px 3px 3px rgba(0,0,0,0.3)
+
+#mega-js
+  margin-bottom: 0
+  color: $orange
+  text-transform: none
+
+#kilo
+  margin-top: 0
+  +rem(font-size, 3rem)
+  letter-spacing: 1px
+  color: $dark-blue
+  text-align: center
+  max-width: 15em
+  margin-left: auto
+  margin-right: auto
+  +media($medium)
+    +rem(font-size, 7rem)
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3)
 
 h1 
   +rem(font-size, 7rem)
@@ -65,9 +92,9 @@ h1
 h2
   +rem(font-size, 5rem) 
   color: $orange
-  text-align: center
-  +media($medium)
-    text-align: left
+  // text-align: center
+  // +media($medium)
+  //   text-align: left
 
 h3
   +rem(font-size, 4rem)
@@ -80,16 +107,29 @@ ul
   list-style-type: square
   +rem(margin-top, 1rem)
 
+a 
+  color: $light-blue
+  text-decoration: none
+  border-bottom: 2px solid $light-blue
+  +transition(all 0.15s ease-in-out)
+  &:hover
+    color: $dark-blue
+    border-color: $dark-blue
+
 .checkmark
-  list-style-image: url('images/checkmark.svg')
+  list-style-image: url('images/checkmark.svg') !important
 
 blockquote
   margin-left: 0
-  border-left: 6px solid $dark-blue
-  +rem(padding-left, 2rem)
+  // border-left: 6px solid $dark-blue
+  // +rem(padding-left, 2rem)
   footer:before
     content: "\2014"
 
+button
+  border: none
+  @extend .button
+  
 ::selection
   background-color: $light-blue
   color: #fff
