--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -1,8 +1,10 @@
 .home-header
-  font-size: 4rem
+  +rem(font-size, 3rem)
+  +media($medium)
+    +rem(font-size, 4rem)
   +rem(margin-top, 3rem)
   text-align: center
- 
+
 .home-video
   // +rem(margin-bottom, 5rem)
   +rem(margin-top, 5rem)
@@ -20,18 +22,34 @@
       +rem(margin-bottom, 2rem)
 
 .home-form
-  +rem(padding, 0 5rem)
-  border: 4px solid $dark-blue
-  +media($medium)
-    border-width: 6px
-  box-shadow: 1px 1px 1px $grey, -1px -1px 1px $grey
-  +border-radius-large
+  @extend %border-box
   +media($large)
     +span-columns(8)
     +shift(2)
   clear: both
 
-.experts
-  clear: both
+.home-testimonials
+  @extend %border-box
+  @extend .wrap
+  margin-left: auto
+  margin-right: auto
+  +rem(margin-bottom, 5rem)
+  article
+    +rem(margin-bottom, 6rem)
 
-  
+.countdown
+  a
+    border: none
+    
+.gifts
+  // border: 1px solid $red
+
+.gift
+  @extend .matrix-element
+  +rem(padding, 1rem)
+  div // div contaning the image
+    height: 160px
+  img
+    max-height: 150px 
+  h3
+    height: 2em
