--- a/sass/modules/_mixins.sass
+++ b/sass/modules/_mixins.sass
@@ -1,2 +1,15 @@
 @mixin border-radius-large
   border-radius: 15px
+
+.u-textCenter-small // center text only on small screens 
+  text-align: center
+  +media($medium)
+    text-align: left
+    
+%border-box
+  +rem(padding, 0 5rem)
+  border: 4px solid $dark-blue
+  +media($medium)
+    border-width: 6px
+  box-shadow: 1px 1px 1px $grey, -1px -1px 1px $grey
+  +border-radius-large
