Use max-height instead of max-width for expert pictures

--- a/sass/modules/_expert.sass
+++ b/sass/modules/_expert.sass
@@ -12,7 +12,7 @@
     +media($large)
       +shift(1)
     img
-      max-width: 225px 
+      max-height: 225px 
       +media($medium)
         +rem(margin-right, 6rem)
         float: left
