Use max-height instead of max-width for expert pictures.

--- a/sass/modules/_grid.sass
+++ b/sass/modules/_grid.sass
@@ -16,7 +16,7 @@
 
 .matrix-element
   img
-    max-width: 225px   
+    max-height: 225px   
   border-bottom: 1px solid $grey  
   +media($medium)
     border: none
