--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -111,7 +111,7 @@ a
   color: $light-blue
   text-decoration: none
   border-bottom: 2px solid $light-blue
-  +transition(all 0.15s ease-in-out)
+  +transition(color 0.15s ease-in-out, border-color 0.15s ease-in-out)
   &:hover
     color: $dark-blue
     border-color: $dark-blue
