--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -85,18 +85,18 @@ h1,h2,h3,h4,h5,h6,.mega,.giga
     +rem(font-size, 7rem)
     text-shadow: 1px 1px 3px rgba(0,0,0,0.3)
 
-h1 
+h1, .h1 
   +rem(font-size, 7rem)
   color: $orange
     
-h2
+h2, .h2
   +rem(font-size, 5rem) 
   color: $orange
   // text-align: center
   // +media($medium)
   //   text-align: left
 
-h3
+h3, .h3
   +rem(font-size, 4rem)
   color: $dark-blue
 
