Display inline-block, keep text color

--- a/sass/modules/_button.sass
+++ b/sass/modules/_button.sass
@@ -5,6 +5,7 @@
   +rem(padding, 1.5rem 1.0rem)
   border-radius: 2px
   border: none
+  display: inline-block
  
 
 .button--important
@@ -14,6 +15,7 @@
   +transition(all 0.25s)
   &:hover
     background-color: darken($red,3%)
+    color: #fff
 
 .button--friendly
   color: $dark-blue
