--- a/sass/modules/_clearfix.scss
+++ b/sass/modules/_clearfix.scss
@@ -7,14 +7,22 @@
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-.cf:before,
-.cf:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
+// .cf:before,
+// .cf:after {
+//     content: " "; /* 1 */
+//     display: table; /* 2 */
+// }
 
-.cf:after {
+// .cf:after {
+//     clear: both;
+// }
+
+.cf {
+  &:after {
+    content: "";
+    display: table;
     clear: both;
+  }
 }
 
 /**
