--- a/sass/modules/_footer.sass
+++ b/sass/modules/_footer.sass
@@ -10,3 +10,8 @@
       float: left
     p:last-child
       float: right
+
+.footer-logo // apply to the a element
+  border: none
+  img
+    +rem(margin-top, 1rem)
