--- a/sass/style.sass
+++ b/sass/style.sass
@@ -36,6 +36,7 @@
 @import modules/featured
 @import modules/expert
 @import modules/plan
+@import modules/faqs
 @import modules/footer
 @import modules/animations
 @import modules/iframe-container
