Add icomoon lock icon

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,6 +22,7 @@
 @import vendor/flipclock
 @import modules/countdown
 @import vendor/responsive-iframe
+@import vendor/icons
 
 // my stuff
 @import base
