--- a/sass/style.sass
+++ b/sass/style.sass
@@ -37,6 +37,7 @@
 @import modules/featured
 @import modules/expert
 @import modules/plan
+@import modules/gifts
 @import modules/faqs
 @import modules/footer
 @import modules/animations
