--- a/sass/modules/_home.sass
+++ b/sass/modules/_home.sass
@@ -29,11 +29,7 @@
   clear: both
 
 .home-testimonials
-  @extend %border-box
-  @extend .wrap
-  margin-left: auto
-  margin-right: auto
-  +rem(margin-bottom, 5rem)
+  @extend .box
   article
     +rem(margin-bottom, 6rem)
 
