--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,7 @@
 @import vendor/underscore
 @import vendor/suit/text
 @import vendor/suit/space
+@import vendor/suit/display
 @import modules/fitvids
 @import vendor/flipclock
 @import modules/countdown
