--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -32,7 +32,7 @@ small
   +rem(margin-bottom, 3rem)
 
 h1,h2,h3,h4,h5,h6,.mega,.giga
-  font-family: "alternate-gothic-no-3-d"
+  font-family: "alternate-gothic-no-3-d", sans-serif
   font-weight: normal
   line-height: 1.1
   +rem(margin, 3rem 0)
@@ -118,6 +118,14 @@ a
 
 .checkmark
   list-style-image: url('images/checkmark.svg') !important
+  // li:before 
+  //   content: ''
+  //   background: url('images/checkmark.svg') no-repeat top left
+  //   height: 20px
+  //   width: 20px
+  //   position: absolute
+  //   left: 0
+  //   top: 8px
 
 blockquote
   margin-left: 0
