Add nav table for events page

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -39,6 +39,7 @@
 @import modules/expert
 @import modules/plan
 @import modules/gifts
+@import modules/infotable
 @import modules/faqs
 @import modules/footer
 @import modules/animations
