--- a/sass/modules/_wrap.sass
+++ b/sass/modules/_wrap.sass
@@ -1,7 +1,8 @@
 .wrap
   max-width: 36em
 
-.wrap--section
+.wrap--section, .wrap--wide
   max-width: 40em
   margin-left: auto
   margin-right: auto
+
