--- a/sass/modules/_expert.sass
+++ b/sass/modules/_expert.sass
@@ -11,7 +11,6 @@
 .expert-info
   +rem(margin-bottom, 8rem)
   border-top: 1px solid $grey
-  +rem(padding-top, 8rem)
   & > header
     @extend .cf
     +rem(margin-bottom, 5rem)
@@ -67,6 +66,9 @@
   margin-right: auto
 
 .replay-info
+  margin-left: auto
+  margin-right: auto
+  text-align: center
   p
     +rem(margin-top, 5rem)
     +rem(margin-bottom, 1rem)
